[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "image-diffusion"
version = "0.0.0"
description = "Class-conditional DiT image generation using flow matching."
authors = [{name = "Esau A. Hervert Hernandez"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src"]